--- a/FocusriteRemote/MainWindow.axaml
+++ b/FocusriteRemote/MainWindow.axaml
@@ -2,8 +2,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:frpdi="using:FocusriteRemoteProtocol.DeviceItems"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="FocusriteRemote.MainWindow"
         Title="FocusriteRemote">
-    <Button HorizontalAlignment="Center">Mute!</Button>
+	<TabControl Name="TabControl">
+	</TabControl>
 </Window>
